crates/tiler-ir/tests/shape-evidence/fail/implement_evidence.stderr
error[E0277]: the trait bound `Forged: shape::evidence::sealed::Sealed` is not satisfied
 --> tests/shape-evidence/fail/implement_evidence.rs:8:24
  |
8 | impl ShapeEvidence for Forged {
  |                        ^^^^^^ unsatisfied trait bound
  |
help: the trait `shape::evidence::sealed::Sealed` is not implemented for `Forged`
 --> tests/shape-evidence/fail/implement_evidence.rs:6:1
  |
6 | struct Forged;
  | ^^^^^^^^^^^^^
help: the following other types implement trait `shape::evidence::sealed::Sealed`
 --> src/shape/evidence.rs
  |
  | impl<const RANK: usize> sealed::Sealed for Rank<RANK> {}
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `tiler_ir::shape::Rank<RANK>`
...
  | impl<const RANK: usize, const EXTENTS: [u64; RANK]> sealed::Sealed for StaticShape<RANK, EXTENTS> {}
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `StaticShape<RANK, EXTENTS>`
note: required by a bound in `ShapeEvidence`
 --> src/shape/evidence.rs
  |
  | pub trait ShapeEvidence: sealed::Sealed + 'static {
  |                          ^^^^^^^^^^^^^^ required by this bound in `ShapeEvidence`
  = note: `ShapeEvidence` is a "sealed trait", because to implement it you also need to implement `tiler_ir::shape::evidence::sealed::Sealed`, which is not accessible; this is usually done to force you to use one of the provided types that already implement it
  = help: the following types implement the trait:
            tiler_ir::shape::Rank<RANK>
            tiler_ir::shape::StaticShape<RANK, EXTENTS>
